tool/bits/idl/idl_parser.output
Terminals unused in grammar

   tok_literal
   tok_dub_constant
   tok_const


Grammar

    0 $accept: Program $end

    1 Program: DefinitionList

    2 DefinitionList: DefinitionList Definition
    3               | /* empty */

    4 Definition: Include
    5           | Namespace
    6           | TypeDefinition

    7 Include: tok_include '"' IncludePath tok_identifier '"'

    8 IncludePath: IncludePath tok_identifier '/'
    9            | /* empty */

   10 Namespace: tok_namespace NamespaceTail tok_identifier SemicolonOptional

   11 NamespaceTail: NamespaceTail tok_identifier tok_namespace_separator
   12              | /* empty */

   13 TypeDefinition: Enum
   14               | Struct
   15               | Message
   16               | Tx

   17 Enum: tok_enum tok_identifier '{' EnumDefList '}' SemicolonOptional

   18 EnumDefList: EnumDefList EnumDef
   19            | /* empty */

   20 EnumDef: EnumValue CommaOrSemicolonOptional

   21 EnumValue: tok_identifier '=' SimpleExpression
   22          | tok_identifier

   23 Struct: StructHead tok_identifier '{' StructFieldList '}' SemicolonOptional

   24 StructHead: tok_struct

   25 StructFieldList: StructFieldList Field
   26                | /* empty */

   27 Message: MessageKeyword tok_identifier SuperClassOptional '{' MessageFieldList '}' SemicolonOptional

   28 MessageKeyword: tok_message
   29               | tok_msg

   30 MessageFieldList: MessageFieldList Field
   31                 | /* empty */

   32 SuperClassOptional: ':' FullType
   33                   | /* empty */

   34 Tx: tok_tx tok_identifier '{' TxNodeList '}' SemicolonOptional

   35 TxNodeList: TxNodeList TxNodeTopic
   36           | TxNodeList TxNodeBind
   37           | TxNodeList TxNodeResult
   38           | TxNodeList TxNodeQuery
   39           | /* empty */

   40 TxNodeTopic: tok_topic tok_identifier CommaOrSemicolonOptional

   41 TxNodeBind: tok_tx_bind '{' TxNodeBindFieldList '}' CommaOrSemicolonOptional

   42 TxNodeBindFieldList: TxNodeBindFieldList Field
   43                    | TxNodeBindFieldList tok_tx_return tok_identifier SemicolonOptional
   44                    | /* empty */

   45 TxNodeResult: tok_tx_result '{' TxNodeResultSetList '}' SemicolonOptional

   46 TxNodeResultSetList: TxNodeResultSetList TxNodeResultSetField
   47                    | /* empty */

   48 TxNodeResultSetField: TxNodeResultSetSingle
   49                     | TxNodeResultSetMulti

   50 TxNodeResultSetSingle: tok_tx_single '{' TxNodeResultSetFieldList '}' CommaOrSemicolonOptional

   51 TxNodeResultSetMulti: tok_tx_multi '{' TxNodeResultSetFieldList '}' CommaOrSemicolonOptional

   52 TxNodeResultSetFieldList: TxNodeResultSetFieldList Field
   53                         | /* empty */

   54 TxNodeQuery: tok_tx_query tok_query_string CommaOrSemicolonOptional

   55 Field: BasicType tok_identifier FieldValue CommaOrSemicolonOptional
   56      | VecType tok_identifier CommaOrSemicolonOptional
   57      | tok_topic tok_identifier CommaOrSemicolonOptional
   58      | tok_opt '(' tok_enable_cipher ')' CommaOrSemicolonOptional
   59      | tok_opt '(' tok_enable_sequence ')' CommaOrSemicolonOptional
   60      | tok_opt '(' tok_enable_checksum ')' CommaOrSemicolonOptional
   61      | tok_macro_line

   62 BasicType: FullType
   63          | SimpleType

   64 FullType: NameAccessor tok_identifier

   65 NameAccessor: NameAccessor tok_identifier tok_namespace_separator
   66             | /* empty */

   67 VecType: tok_vec '<' BasicType '>'
   68        | tok_vec '<' BasicType ',' tok_int_constant '>'

   69 SimpleType: tok_string
   70           | tok_ustring
   71           | tok_bool
   72           | tok_i8
   73           | tok_i16
   74           | tok_i32
   75           | tok_i64
   76           | tok_u8
   77           | tok_u16
   78           | tok_u32
   79           | tok_u64
   80           | tok_float
   81           | tok_double
   82           | tok_timestamp

   83 FieldValue: '=' SimpleExpression
   84           | ':' tok_out
   85           | /* empty */

   86 SimpleExpression: SimpleExpression '+' InnerExpression
   87                 | SimpleExpression '-' InnerExpression
   88                 | InnerExpression

   89 InnerExpression: FullType
   90                | '+' tok_int_constant
   91                | '-' tok_int_constant
   92                | tok_int_constant

   93 CommaOrSemicolonOptional: ','
   94                         | ';'
   95                         | /* empty */

   96 SemicolonOptional: ';'
   97                  | /* empty */


Terminals, with rules where they appear

$end (0) 0
'"' (34) 7
'(' (40) 58 59 60
')' (41) 58 59 60
'+' (43) 86 90
',' (44) 68 93
'-' (45) 87 91
'/' (47) 8
':' (58) 32 84
';' (59) 94 96
'<' (60) 67 68
'=' (61) 21 83
'>' (62) 67 68
'{' (123) 17 23 27 34 41 45 50 51
'}' (125) 17 23 27 34 41 45 50 51
error (256)
tok_identifier (258) 7 8 10 11 17 21 22 23 27 34 40 43 55 56 57 64
    65
tok_literal (259)
tok_int_constant (260) 68 90 91 92
tok_dub_constant (261)
tok_bool (262) 71
tok_string (263) 69
tok_ustring (264) 70
tok_i8 (265) 72
tok_i16 (266) 73
tok_i32 (267) 74
tok_i64 (268) 75
tok_u8 (269) 76
tok_u16 (270) 77
tok_u32 (271) 78
tok_u64 (272) 79
tok_float (273) 80
tok_double (274) 81
tok_timestamp (275) 82
tok_namespace_separator (276) 11 65
tok_namespace (277) 10
tok_struct (278) 24
tok_enum (279) 17
tok_const (280)
tok_message (281) 28
tok_msg (282) 29
tok_include (283) 7
tok_macro_line (284) 61
tok_vec (285) 67 68
tok_topic (286) 40 57
tok_out (287) 84
tok_enable_cipher (288) 58
tok_enable_checksum (289) 60
tok_enable_sequence (290) 59
tok_opt (291) 58 59 60
tok_tx (292) 34
tok_tx_bind (293) 41
tok_tx_result (294) 45
tok_tx_single (295) 50
tok_tx_multi (296) 51
tok_tx_query (297) 54
tok_tx_return (298) 43
tok_query_string (299) 54


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
Program (60)
    on left: 1, on right: 0
DefinitionList (61)
    on left: 2 3, on right: 1 2
Definition (62)
    on left: 4 5 6, on right: 2
Include (63)
    on left: 7, on right: 4
IncludePath (64)
    on left: 8 9, on right: 7 8
Namespace (65)
    on left: 10, on right: 5
NamespaceTail (66)
    on left: 11 12, on right: 10 11
TypeDefinition (67)
    on left: 13 14 15 16, on right: 6
Enum (68)
    on left: 17, on right: 13
EnumDefList (69)
    on left: 18 19, on right: 17 18
EnumDef (70)
    on left: 20, on right: 18
EnumValue (71)
    on left: 21 22, on right: 20
Struct (72)
    on left: 23, on right: 14
StructHead (73)
    on left: 24, on right: 23
StructFieldList (74)
    on left: 25 26, on right: 23 25
Message (75)
    on left: 27, on right: 15
MessageKeyword (76)
    on left: 28 29, on right: 27
MessageFieldList (77)
    on left: 30 31, on right: 27 30
SuperClassOptional (78)
    on left: 32 33, on right: 27
Tx (79)
    on left: 34, on right: 16
TxNodeList (80)
    on left: 35 36 37 38 39, on right: 34 35 36 37 38
TxNodeTopic (81)
    on left: 40, on right: 35
TxNodeBind (82)
    on left: 41, on right: 36
TxNodeBindFieldList (83)
    on left: 42 43 44, on right: 41 42 43
TxNodeResult (84)
    on left: 45, on right: 37
TxNodeResultSetList (85)
    on left: 46 47, on right: 45 46
TxNodeResultSetField (86)
    on left: 48 49, on right: 46
TxNodeResultSetSingle (87)
    on left: 50, on right: 48
TxNodeResultSetMulti (88)
    on left: 51, on right: 49
TxNodeResultSetFieldList (89)
    on left: 52 53, on right: 50 51 52
TxNodeQuery (90)
    on left: 54, on right: 38
Field (91)
    on left: 55 56 57 58 59 60 61, on right: 25 30 42 52
BasicType (92)
    on left: 62 63, on right: 55 67 68
FullType (93)
    on left: 64, on right: 32 62 89
NameAccessor (94)
    on left: 65 66, on right: 64 65
VecType (95)
    on left: 67 68, on right: 56
SimpleType (96)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82, on right: 63
FieldValue (97)
    on left: 83 84 85, on right: 55
SimpleExpression (98)
    on left: 86 87 88, on right: 21 83 86 87
InnerExpression (99)
    on left: 89 90 91 92, on right: 86 87 88
CommaOrSemicolonOptional (100)
    on left: 93 94 95, on right: 20 40 41 50 51 54 55 56 57 58 59 60
SemicolonOptional (101)
    on left: 96 97, on right: 10 17 23 27 34 43 45


State 0

    0 $accept: . Program $end

    $default  reduce using rule 3 (DefinitionList)

    Program         go to state 1
    DefinitionList  go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    1 Program: DefinitionList .
    2 DefinitionList: DefinitionList . Definition

    tok_namespace  shift, and go to state 4
    tok_struct     shift, and go to state 5
    tok_enum       shift, and go to state 6
    tok_message    shift, and go to state 7
    tok_msg        shift, and go to state 8
    tok_include    shift, and go to state 9
    tok_tx         shift, and go to state 10

    $default  reduce using rule 1 (Program)

    Definition      go to state 11
    Include         go to state 12
    Namespace       go to state 13
    TypeDefinition  go to state 14
    Enum            go to state 15
    Struct          go to state 16
    StructHead      go to state 17
    Message         go to state 18
    MessageKeyword  go to state 19
    Tx              go to state 20


State 3

    0 $accept: Program $end .

    $default  accept


State 4

   10 Namespace: tok_namespace . NamespaceTail tok_identifier SemicolonOptional

    $default  reduce using rule 12 (NamespaceTail)

    NamespaceTail  go to state 21


State 5

   24 StructHead: tok_struct .

    $default  reduce using rule 24 (StructHead)


State 6

   17 Enum: tok_enum . tok_identifier '{' EnumDefList '}' SemicolonOptional

    tok_identifier  shift, and go to state 22


State 7

   28 MessageKeyword: tok_message .

    $default  reduce using rule 28 (MessageKeyword)


State 8

   29 MessageKeyword: tok_msg .

    $default  reduce using rule 29 (MessageKeyword)


State 9

    7 Include: tok_include . '"' IncludePath tok_identifier '"'

    '"'  shift, and go to state 23


State 10

   34 Tx: tok_tx . tok_identifier '{' TxNodeList '}' SemicolonOptional

    tok_identifier  shift, and go to state 24


State 11

    2 DefinitionList: DefinitionList Definition .

    $default  reduce using rule 2 (DefinitionList)


State 12

    4 Definition: Include .

    $default  reduce using rule 4 (Definition)


State 13

    5 Definition: Namespace .

    $default  reduce using rule 5 (Definition)


State 14

    6 Definition: TypeDefinition .

    $default  reduce using rule 6 (Definition)


State 15

   13 TypeDefinition: Enum .

    $default  reduce using rule 13 (TypeDefinition)


State 16

   14 TypeDefinition: Struct .

    $default  reduce using rule 14 (TypeDefinition)


State 17

   23 Struct: StructHead . tok_identifier '{' StructFieldList '}' SemicolonOptional

    tok_identifier  shift, and go to state 25


State 18

   15 TypeDefinition: Message .

    $default  reduce using rule 15 (TypeDefinition)


State 19

   27 Message: MessageKeyword . tok_identifier SuperClassOptional '{' MessageFieldList '}' SemicolonOptional

    tok_identifier  shift, and go to state 26


State 20

   16 TypeDefinition: Tx .

    $default  reduce using rule 16 (TypeDefinition)


State 21

   10 Namespace: tok_namespace NamespaceTail . tok_identifier SemicolonOptional
   11 NamespaceTail: NamespaceTail . tok_identifier tok_namespace_separator

    tok_identifier  shift, and go to state 27


State 22

   17 Enum: tok_enum tok_identifier . '{' EnumDefList '}' SemicolonOptional

    '{'  shift, and go to state 28


State 23

    7 Include: tok_include '"' . IncludePath tok_identifier '"'

    $default  reduce using rule 9 (IncludePath)

    IncludePath  go to state 29


State 24

   34 Tx: tok_tx tok_identifier . '{' TxNodeList '}' SemicolonOptional

    '{'  shift, and go to state 30


State 25

   23 Struct: StructHead tok_identifier . '{' StructFieldList '}' SemicolonOptional

    '{'  shift, and go to state 31


State 26

   27 Message: MessageKeyword tok_identifier . SuperClassOptional '{' MessageFieldList '}' SemicolonOptional

    ':'  shift, and go to state 32

    $default  reduce using rule 33 (SuperClassOptional)

    SuperClassOptional  go to state 33


State 27

   10 Namespace: tok_namespace NamespaceTail tok_identifier . SemicolonOptional
   11 NamespaceTail: NamespaceTail tok_identifier . tok_namespace_separator

    tok_namespace_separator  shift, and go to state 34
    ';'                      shift, and go to state 35

    $default  reduce using rule 97 (SemicolonOptional)

    SemicolonOptional  go to state 36


State 28

   17 Enum: tok_enum tok_identifier '{' . EnumDefList '}' SemicolonOptional

    $default  reduce using rule 19 (EnumDefList)

    EnumDefList  go to state 37


State 29

    7 Include: tok_include '"' IncludePath . tok_identifier '"'
    8 IncludePath: IncludePath . tok_identifier '/'

    tok_identifier  shift, and go to state 38


State 30

   34 Tx: tok_tx tok_identifier '{' . TxNodeList '}' SemicolonOptional

    $default  reduce using rule 39 (TxNodeList)

    TxNodeList  go to state 39


State 31

   23 Struct: StructHead tok_identifier '{' . StructFieldList '}' SemicolonOptional

    $default  reduce using rule 26 (StructFieldList)

    StructFieldList  go to state 40


State 32

   32 SuperClassOptional: ':' . FullType

    $default  reduce using rule 66 (NameAccessor)

    FullType      go to state 41
    NameAccessor  go to state 42


State 33

   27 Message: MessageKeyword tok_identifier SuperClassOptional . '{' MessageFieldList '}' SemicolonOptional

    '{'  shift, and go to state 43


State 34

   11 NamespaceTail: NamespaceTail tok_identifier tok_namespace_separator .

    $default  reduce using rule 11 (NamespaceTail)


State 35

   96 SemicolonOptional: ';' .

    $default  reduce using rule 96 (SemicolonOptional)


State 36

   10 Namespace: tok_namespace NamespaceTail tok_identifier SemicolonOptional .

    $default  reduce using rule 10 (Namespace)


State 37

   17 Enum: tok_enum tok_identifier '{' EnumDefList . '}' SemicolonOptional
   18 EnumDefList: EnumDefList . EnumDef

    tok_identifier  shift, and go to state 44
    '}'             shift, and go to state 45

    EnumDef    go to state 46
    EnumValue  go to state 47


State 38

    7 Include: tok_include '"' IncludePath tok_identifier . '"'
    8 IncludePath: IncludePath tok_identifier . '/'

    '"'  shift, and go to state 48
    '/'  shift, and go to state 49


State 39

   34 Tx: tok_tx tok_identifier '{' TxNodeList . '}' SemicolonOptional
   35 TxNodeList: TxNodeList . TxNodeTopic
   36           | TxNodeList . TxNodeBind
   37           | TxNodeList . TxNodeResult
   38           | TxNodeList . TxNodeQuery

    tok_topic      shift, and go to state 50
    tok_tx_bind    shift, and go to state 51
    tok_tx_result  shift, and go to state 52
    tok_tx_query   shift, and go to state 53
    '}'            shift, and go to state 54

    TxNodeTopic   go to state 55
    TxNodeBind    go to state 56
    TxNodeResult  go to state 57
    TxNodeQuery   go to state 58


State 40

   23 Struct: StructHead tok_identifier '{' StructFieldList . '}' SemicolonOptional
   25 StructFieldList: StructFieldList . Field

    tok_bool        shift, and go to state 59
    tok_string      shift, and go to state 60
    tok_ustring     shift, and go to state 61
    tok_i8          shift, and go to state 62
    tok_i16         shift, and go to state 63
    tok_i32         shift, and go to state 64
    tok_i64         shift, and go to state 65
    tok_u8          shift, and go to state 66
    tok_u16         shift, and go to state 67
    tok_u32         shift, and go to state 68
    tok_u64         shift, and go to state 69
    tok_float       shift, and go to state 70
    tok_double      shift, and go to state 71
    tok_timestamp   shift, and go to state 72
    tok_macro_line  shift, and go to state 73
    tok_vec         shift, and go to state 74
    tok_topic       shift, and go to state 75
    tok_opt         shift, and go to state 76
    '}'             shift, and go to state 77

    $default  reduce using rule 66 (NameAccessor)

    Field         go to state 78
    BasicType     go to state 79
    FullType      go to state 80
    NameAccessor  go to state 42
    VecType       go to state 81
    SimpleType    go to state 82


State 41

   32 SuperClassOptional: ':' FullType .

    $default  reduce using rule 32 (SuperClassOptional)


State 42

   64 FullType: NameAccessor . tok_identifier
   65 NameAccessor: NameAccessor . tok_identifier tok_namespace_separator

    tok_identifier  shift, and go to state 83


State 43

   27 Message: MessageKeyword tok_identifier SuperClassOptional '{' . MessageFieldList '}' SemicolonOptional

    $default  reduce using rule 31 (MessageFieldList)

    MessageFieldList  go to state 84


State 44

   21 EnumValue: tok_identifier . '=' SimpleExpression
   22          | tok_identifier .

    '='  shift, and go to state 85

    $default  reduce using rule 22 (EnumValue)


State 45

   17 Enum: tok_enum tok_identifier '{' EnumDefList '}' . SemicolonOptional

    ';'  shift, and go to state 35

    $default  reduce using rule 97 (SemicolonOptional)

    SemicolonOptional  go to state 86


State 46

   18 EnumDefList: EnumDefList EnumDef .

    $default  reduce using rule 18 (EnumDefList)


State 47

   20 EnumDef: EnumValue . CommaOrSemicolonOptional

    ','  shift, and go to state 87
    ';'  shift, and go to state 88

    $default  reduce using rule 95 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 89


State 48

    7 Include: tok_include '"' IncludePath tok_identifier '"' .

    $default  reduce using rule 7 (Include)


State 49

    8 IncludePath: IncludePath tok_identifier '/' .

    $default  reduce using rule 8 (IncludePath)


State 50

   40 TxNodeTopic: tok_topic . tok_identifier CommaOrSemicolonOptional

    tok_identifier  shift, and go to state 90


State 51

   41 TxNodeBind: tok_tx_bind . '{' TxNodeBindFieldList '}' CommaOrSemicolonOptional

    '{'  shift, and go to state 91


State 52

   45 TxNodeResult: tok_tx_result . '{' TxNodeResultSetList '}' SemicolonOptional

    '{'  shift, and go to state 92


State 53

   54 TxNodeQuery: tok_tx_query . tok_query_string CommaOrSemicolonOptional

    tok_query_string  shift, and go to state 93


State 54

   34 Tx: tok_tx tok_identifier '{' TxNodeList '}' . SemicolonOptional

    ';'  shift, and go to state 35

    $default  reduce using rule 97 (SemicolonOptional)

    SemicolonOptional  go to state 94


State 55

   35 TxNodeList: TxNodeList TxNodeTopic .

    $default  reduce using rule 35 (TxNodeList)


State 56

   36 TxNodeList: TxNodeList TxNodeBind .

    $default  reduce using rule 36 (TxNodeList)


State 57

   37 TxNodeList: TxNodeList TxNodeResult .

    $default  reduce using rule 37 (TxNodeList)


State 58

   38 TxNodeList: TxNodeList TxNodeQuery .

    $default  reduce using rule 38 (TxNodeList)


State 59

   71 SimpleType: tok_bool .

    $default  reduce using rule 71 (SimpleType)


State 60

   69 SimpleType: tok_string .

    $default  reduce using rule 69 (SimpleType)


State 61

   70 SimpleType: tok_ustring .

    $default  reduce using rule 70 (SimpleType)


State 62

   72 SimpleType: tok_i8 .

    $default  reduce using rule 72 (SimpleType)


State 63

   73 SimpleType: tok_i16 .

    $default  reduce using rule 73 (SimpleType)


State 64

   74 SimpleType: tok_i32 .

    $default  reduce using rule 74 (SimpleType)


State 65

   75 SimpleType: tok_i64 .

    $default  reduce using rule 75 (SimpleType)


State 66

   76 SimpleType: tok_u8 .

    $default  reduce using rule 76 (SimpleType)


State 67

   77 SimpleType: tok_u16 .

    $default  reduce using rule 77 (SimpleType)


State 68

   78 SimpleType: tok_u32 .

    $default  reduce using rule 78 (SimpleType)


State 69

   79 SimpleType: tok_u64 .

    $default  reduce using rule 79 (SimpleType)


State 70

   80 SimpleType: tok_float .

    $default  reduce using rule 80 (SimpleType)


State 71

   81 SimpleType: tok_double .

    $default  reduce using rule 81 (SimpleType)


State 72

   82 SimpleType: tok_timestamp .

    $default  reduce using rule 82 (SimpleType)


State 73

   61 Field: tok_macro_line .

    $default  reduce using rule 61 (Field)


State 74

   67 VecType: tok_vec . '<' BasicType '>'
   68        | tok_vec . '<' BasicType ',' tok_int_constant '>'

    '<'  shift, and go to state 95


State 75

   57 Field: tok_topic . tok_identifier CommaOrSemicolonOptional

    tok_identifier  shift, and go to state 96


State 76

   58 Field: tok_opt . '(' tok_enable_cipher ')' CommaOrSemicolonOptional
   59      | tok_opt . '(' tok_enable_sequence ')' CommaOrSemicolonOptional
   60      | tok_opt . '(' tok_enable_checksum ')' CommaOrSemicolonOptional

    '('  shift, and go to state 97


State 77

   23 Struct: StructHead tok_identifier '{' StructFieldList '}' . SemicolonOptional

    ';'  shift, and go to state 35

    $default  reduce using rule 97 (SemicolonOptional)

    SemicolonOptional  go to state 98


State 78

   25 StructFieldList: StructFieldList Field .

    $default  reduce using rule 25 (StructFieldList)


State 79

   55 Field: BasicType . tok_identifier FieldValue CommaOrSemicolonOptional

    tok_identifier  shift, and go to state 99


State 80

   62 BasicType: FullType .

    $default  reduce using rule 62 (BasicType)


State 81

   56 Field: VecType . tok_identifier CommaOrSemicolonOptional

    tok_identifier  shift, and go to state 100


State 82

   63 BasicType: SimpleType .

    $default  reduce using rule 63 (BasicType)


State 83

   64 FullType: NameAccessor tok_identifier .
   65 NameAccessor: NameAccessor tok_identifier . tok_namespace_separator

    tok_namespace_separator  shift, and go to state 101

    $default  reduce using rule 64 (FullType)


State 84

   27 Message: MessageKeyword tok_identifier SuperClassOptional '{' MessageFieldList . '}' SemicolonOptional
   30 MessageFieldList: MessageFieldList . Field

    tok_bool        shift, and go to state 59
    tok_string      shift, and go to state 60
    tok_ustring     shift, and go to state 61
    tok_i8          shift, and go to state 62
    tok_i16         shift, and go to state 63
    tok_i32         shift, and go to state 64
    tok_i64         shift, and go to state 65
    tok_u8          shift, and go to state 66
    tok_u16         shift, and go to state 67
    tok_u32         shift, and go to state 68
    tok_u64         shift, and go to state 69
    tok_float       shift, and go to state 70
    tok_double      shift, and go to state 71
    tok_timestamp   shift, and go to state 72
    tok_macro_line  shift, and go to state 73
    tok_vec         shift, and go to state 74
    tok_topic       shift, and go to state 75
    tok_opt         shift, and go to state 76
    '}'             shift, and go to state 102

    $default  reduce using rule 66 (NameAccessor)

    Field         go to state 103
    BasicType     go to state 79
    FullType      go to state 80
    NameAccessor  go to state 42
    VecType       go to state 81
    SimpleType    go to state 82


State 85

   21 EnumValue: tok_identifier '=' . SimpleExpression

    tok_int_constant  shift, and go to state 104
    '+'               shift, and go to state 105
    '-'               shift, and go to state 106

    $default  reduce using rule 66 (NameAccessor)

    FullType          go to state 107
    NameAccessor      go to state 42
    SimpleExpression  go to state 108
    InnerExpression   go to state 109


State 86

   17 Enum: tok_enum tok_identifier '{' EnumDefList '}' SemicolonOptional .

    $default  reduce using rule 17 (Enum)


State 87

   93 CommaOrSemicolonOptional: ',' .

    $default  reduce using rule 93 (CommaOrSemicolonOptional)


State 88

   94 CommaOrSemicolonOptional: ';' .

    $default  reduce using rule 94 (CommaOrSemicolonOptional)


State 89

   20 EnumDef: EnumValue CommaOrSemicolonOptional .

    $default  reduce using rule 20 (EnumDef)


State 90

   40 TxNodeTopic: tok_topic tok_identifier . CommaOrSemicolonOptional

    ','  shift, and go to state 87
    ';'  shift, and go to state 88

    $default  reduce using rule 95 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 110


State 91

   41 TxNodeBind: tok_tx_bind '{' . TxNodeBindFieldList '}' CommaOrSemicolonOptional

    $default  reduce using rule 44 (TxNodeBindFieldList)

    TxNodeBindFieldList  go to state 111


State 92

   45 TxNodeResult: tok_tx_result '{' . TxNodeResultSetList '}' SemicolonOptional

    $default  reduce using rule 47 (TxNodeResultSetList)

    TxNodeResultSetList  go to state 112


State 93

   54 TxNodeQuery: tok_tx_query tok_query_string . CommaOrSemicolonOptional

    ','  shift, and go to state 87
    ';'  shift, and go to state 88

    $default  reduce using rule 95 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 113


State 94

   34 Tx: tok_tx tok_identifier '{' TxNodeList '}' SemicolonOptional .

    $default  reduce using rule 34 (Tx)


State 95

   67 VecType: tok_vec '<' . BasicType '>'
   68        | tok_vec '<' . BasicType ',' tok_int_constant '>'

    tok_bool       shift, and go to state 59
    tok_string     shift, and go to state 60
    tok_ustring    shift, and go to state 61
    tok_i8         shift, and go to state 62
    tok_i16        shift, and go to state 63
    tok_i32        shift, and go to state 64
    tok_i64        shift, and go to state 65
    tok_u8         shift, and go to state 66
    tok_u16        shift, and go to state 67
    tok_u32        shift, and go to state 68
    tok_u64        shift, and go to state 69
    tok_float      shift, and go to state 70
    tok_double     shift, and go to state 71
    tok_timestamp  shift, and go to state 72

    $default  reduce using rule 66 (NameAccessor)

    BasicType     go to state 114
    FullType      go to state 80
    NameAccessor  go to state 42
    SimpleType    go to state 82


State 96

   57 Field: tok_topic tok_identifier . CommaOrSemicolonOptional

    ','  shift, and go to state 87
    ';'  shift, and go to state 88

    $default  reduce using rule 95 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 115


State 97

   58 Field: tok_opt '(' . tok_enable_cipher ')' CommaOrSemicolonOptional
   59      | tok_opt '(' . tok_enable_sequence ')' CommaOrSemicolonOptional
   60      | tok_opt '(' . tok_enable_checksum ')' CommaOrSemicolonOptional

    tok_enable_cipher    shift, and go to state 116
    tok_enable_checksum  shift, and go to state 117
    tok_enable_sequence  shift, and go to state 118


State 98

   23 Struct: StructHead tok_identifier '{' StructFieldList '}' SemicolonOptional .

    $default  reduce using rule 23 (Struct)


State 99

   55 Field: BasicType tok_identifier . FieldValue CommaOrSemicolonOptional

    '='  shift, and go to state 119
    ':'  shift, and go to state 120

    $default  reduce using rule 85 (FieldValue)

    FieldValue  go to state 121


State 100

   56 Field: VecType tok_identifier . CommaOrSemicolonOptional

    ','  shift, and go to state 87
    ';'  shift, and go to state 88

    $default  reduce using rule 95 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 122


State 101

   65 NameAccessor: NameAccessor tok_identifier tok_namespace_separator .

    $default  reduce using rule 65 (NameAccessor)


State 102

   27 Message: MessageKeyword tok_identifier SuperClassOptional '{' MessageFieldList '}' . SemicolonOptional

    ';'  shift, and go to state 35

    $default  reduce using rule 97 (SemicolonOptional)

    SemicolonOptional  go to state 123


State 103

   30 MessageFieldList: MessageFieldList Field .

    $default  reduce using rule 30 (MessageFieldList)


State 104

   92 InnerExpression: tok_int_constant .

    $default  reduce using rule 92 (InnerExpression)


State 105

   90 InnerExpression: '+' . tok_int_constant

    tok_int_constant  shift, and go to state 124


State 106

   91 InnerExpression: '-' . tok_int_constant

    tok_int_constant  shift, and go to state 125


State 107

   89 InnerExpression: FullType .

    $default  reduce using rule 89 (InnerExpression)


State 108

   21 EnumValue: tok_identifier '=' SimpleExpression .
   86 SimpleExpression: SimpleExpression . '+' InnerExpression
   87                 | SimpleExpression . '-' InnerExpression

    '+'  shift, and go to state 126
    '-'  shift, and go to state 127

    $default  reduce using rule 21 (EnumValue)


State 109

   88 SimpleExpression: InnerExpression .

    $default  reduce using rule 88 (SimpleExpression)


State 110

   40 TxNodeTopic: tok_topic tok_identifier CommaOrSemicolonOptional .

    $default  reduce using rule 40 (TxNodeTopic)


State 111

   41 TxNodeBind: tok_tx_bind '{' TxNodeBindFieldList . '}' CommaOrSemicolonOptional
   42 TxNodeBindFieldList: TxNodeBindFieldList . Field
   43                    | TxNodeBindFieldList . tok_tx_return tok_identifier SemicolonOptional

    tok_bool        shift, and go to state 59
    tok_string      shift, and go to state 60
    tok_ustring     shift, and go to state 61
    tok_i8          shift, and go to state 62
    tok_i16         shift, and go to state 63
    tok_i32         shift, and go to state 64
    tok_i64         shift, and go to state 65
    tok_u8          shift, and go to state 66
    tok_u16         shift, and go to state 67
    tok_u32         shift, and go to state 68
    tok_u64         shift, and go to state 69
    tok_float       shift, and go to state 70
    tok_double      shift, and go to state 71
    tok_timestamp   shift, and go to state 72
    tok_macro_line  shift, and go to state 73
    tok_vec         shift, and go to state 74
    tok_topic       shift, and go to state 75
    tok_opt         shift, and go to state 76
    tok_tx_return   shift, and go to state 128
    '}'             shift, and go to state 129

    $default  reduce using rule 66 (NameAccessor)

    Field         go to state 130
    BasicType     go to state 79
    FullType      go to state 80
    NameAccessor  go to state 42
    VecType       go to state 81
    SimpleType    go to state 82


State 112

   45 TxNodeResult: tok_tx_result '{' TxNodeResultSetList . '}' SemicolonOptional
   46 TxNodeResultSetList: TxNodeResultSetList . TxNodeResultSetField

    tok_tx_single  shift, and go to state 131
    tok_tx_multi   shift, and go to state 132
    '}'            shift, and go to state 133

    TxNodeResultSetField   go to state 134
    TxNodeResultSetSingle  go to state 135
    TxNodeResultSetMulti   go to state 136


State 113

   54 TxNodeQuery: tok_tx_query tok_query_string CommaOrSemicolonOptional .

    $default  reduce using rule 54 (TxNodeQuery)


State 114

   67 VecType: tok_vec '<' BasicType . '>'
   68        | tok_vec '<' BasicType . ',' tok_int_constant '>'

    '>'  shift, and go to state 137
    ','  shift, and go to state 138


State 115

   57 Field: tok_topic tok_identifier CommaOrSemicolonOptional .

    $default  reduce using rule 57 (Field)


State 116

   58 Field: tok_opt '(' tok_enable_cipher . ')' CommaOrSemicolonOptional

    ')'  shift, and go to state 139


State 117

   60 Field: tok_opt '(' tok_enable_checksum . ')' CommaOrSemicolonOptional

    ')'  shift, and go to state 140


State 118

   59 Field: tok_opt '(' tok_enable_sequence . ')' CommaOrSemicolonOptional

    ')'  shift, and go to state 141


State 119

   83 FieldValue: '=' . SimpleExpression

    tok_int_constant  shift, and go to state 104
    '+'               shift, and go to state 105
    '-'               shift, and go to state 106

    $default  reduce using rule 66 (NameAccessor)

    FullType          go to state 107
    NameAccessor      go to state 42
    SimpleExpression  go to state 142
    InnerExpression   go to state 109


State 120

   84 FieldValue: ':' . tok_out

    tok_out  shift, and go to state 143


State 121

   55 Field: BasicType tok_identifier FieldValue . CommaOrSemicolonOptional

    ','  shift, and go to state 87
    ';'  shift, and go to state 88

    $default  reduce using rule 95 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 144


State 122

   56 Field: VecType tok_identifier CommaOrSemicolonOptional .

    $default  reduce using rule 56 (Field)


State 123

   27 Message: MessageKeyword tok_identifier SuperClassOptional '{' MessageFieldList '}' SemicolonOptional .

    $default  reduce using rule 27 (Message)


State 124

   90 InnerExpression: '+' tok_int_constant .

    $default  reduce using rule 90 (InnerExpression)


State 125

   91 InnerExpression: '-' tok_int_constant .

    $default  reduce using rule 91 (InnerExpression)


State 126

   86 SimpleExpression: SimpleExpression '+' . InnerExpression

    tok_int_constant  shift, and go to state 104
    '+'               shift, and go to state 105
    '-'               shift, and go to state 106

    $default  reduce using rule 66 (NameAccessor)
